# torchquantum-dist

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  activate_tqd.sh  batch_test_tqd.sl  distributed_quantum_device.py  env.yaml  pyproject.toml  run_scaling.sh  scaling.py  scaling.sl  scaling_frontier.py  test_dqd.py  test_dtensor.py  test_inv.py  test_tqd_frontier.py
.github/workflows/: pre-commit.yaml
rocm_slurm_scripts/: scaling_frontier.py
scripts/: run_scaling.sh  scaling.py  test_dqd.py  test_grouped.py  test_inv.py
scripts/rocm_slurm/: env_build.sh  scaling_frontier.py  scaling_strong.sl  scaling_weak.sl  test_tqd_frontier.py
test_scripts/: run_scaling.sh  scaling.py  test_dqd.py
tests/: __init__.py  conftest.py  test_distributed.py  test_grouped.py  test_inv.py  test_invertible.py  test_measurement.py
tqd/: __init__.py  custom.py  device.py  encoder.py  functional.py  interchange.py  matrices.py  measure.py  module.py  operator.py
tqd/utils/: interchange.py  maybe_dtensor.py
